[gd_scene load_steps=2 format=3 uid="uid://cf8py46vfqbf4"]

[ext_resource type="Script" path="res://addons/texture_fonts/UI/Components/Vector2Edit.gd" id="1"]

[node name="Vector2Edit" type="VBoxContainer" node_paths=PackedStringArray("label_node", "x_node", "y_node")]
y_sort_enabled = true
anchors_preset = -1
anchor_right = 0.179
anchor_bottom = 0.07
offset_right = -32.2959
script = ExtResource("1")
suffix = "px"
label_node = NodePath("Heading/Label")
x_node = NodePath("Values/X")
y_node = NodePath("Values/Y")

[node name="Heading" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="Heading"]
layout_mode = 2
text = "Label"

[node name="HSeparator" type="HSeparator" parent="Heading"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Values" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="XLabel" type="Label" parent="Values"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.345098, 0.4, 1)
text = "X:"

[node name="X" type="SpinBox" parent="Values"]
clip_contents = true
layout_mode = 2
min_value = -100.0

[node name="Suffix" type="Label" parent="Values/X"]
self_modulate = Color(1, 1, 1, 0.45098)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 4.0
grow_horizontal = 2
grow_vertical = 2
text = "px"

[node name="YLabel" type="Label" parent="Values"]
layout_mode = 2
theme_override_colors/font_color = Color(0.427451, 1, 0.34902, 1)
text = "Y:"

[node name="Y" type="SpinBox" parent="Values"]
clip_contents = true
layout_mode = 2
min_value = -100.0

[node name="Suffix" type="Label" parent="Values/Y"]
self_modulate = Color(1, 1, 1, 0.45098)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 4.0
grow_horizontal = 2
grow_vertical = 2
text = "px"

[connection signal="value_changed" from="Values/X" to="." method="_on_X_value_changed"]
[connection signal="value_changed" from="Values/Y" to="." method="_on_Y_value_changed"]
